package com.dmm.bootcamp.yatter2023.ui.login

data class LoginBindingModel(
    val username: String,
    val password: String,
)